# mkdocs_deploy

./: 404.html  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: gen_ref_pages.py  index.md  install.md
docs/reference/: SUMMARY.md
docs/reference/ensembl/: index.md
docs/reference/ensembl/brc4/: index.md
docs/reference/ensembl/brc4/runnable/: compare_fasta.md  compare_report.md  core_server.md  download_genbank.md  dump_stable_ids.md  extract_from_gb.md  fill_metadata.md  gff3_specifier.md  index.md  integrity.md  json_schema_factory.md  load_sequence_data.md  manifest.md  manifest_stats.md  prepare_genome.md  read_json.md  say_accession.md  seqregion_parser.md
docs/reference/ensembl/io/: index.md
docs/reference/ensembl/io/genomio/: db_factory.md  events_dumper.md  events_loader.md  index.md  integrity.md  manifest_maker.md  manifest_stats.md  seq_region_dumper.md
docs/reference/example/calculate/: calculations.md  index.md
docs/reference/example/google_docs/: google_docs_eg.md  index.md
docs/setup/: Makefile  build_docs.sh
docs/source/: conf.py
install/: index.html
license/: index.html
nextflow/: index.html
pipelines/: index.html
reference/SUMMARY/: index.html
reference/ensembl/: index.html
reference/ensembl/brc4/: index.html
reference/ensembl/brc4/runnable/: index.html
reference/ensembl/brc4/runnable/compare_fasta/: index.html
reference/ensembl/brc4/runnable/compare_report/: index.html
reference/ensembl/brc4/runnable/core_server/: index.html
reference/ensembl/brc4/runnable/download_genbank/: index.html
reference/ensembl/brc4/runnable/dump_stable_ids/: index.html
reference/ensembl/brc4/runnable/extract_from_gb/: index.html
reference/ensembl/brc4/runnable/fill_metadata/: index.html
reference/ensembl/brc4/runnable/gff3_specifier/: index.html
reference/ensembl/brc4/runnable/integrity/: index.html
reference/ensembl/brc4/runnable/json_schema_factory/: index.html
reference/ensembl/brc4/runnable/load_sequence_data/: index.html
reference/ensembl/brc4/runnable/manifest/: index.html
reference/ensembl/brc4/runnable/manifest_stats/: index.html
reference/ensembl/brc4/runnable/prepare_genome/: index.html
reference/ensembl/brc4/runnable/read_json/: index.html
reference/ensembl/brc4/runnable/say_accession/: index.html
reference/ensembl/brc4/runnable/seqregion_parser/: index.html
reference/ensembl/io/: index.html
reference/ensembl/io/genomio/: index.html
reference/ensembl/io/genomio/assembly/: index.html
reference/ensembl/io/genomio/database/: index.html
reference/ensembl/io/genomio/db_factory/: index.html
reference/example/: index.html
reference/example/calculate/: index.html
reference/example/calculate/calculations/: index.html
reference/example/google_docs/: index.html
reference/example/google_docs/google_docs_eg/: index.html
search/: search_index.json
src/ensembl/template/: __init__.py  hello_world.py
src/example/calculate/: __init__.py
src/example/google_docs/: __init__.py
tests/: test_hello.py
usage/: index.html
(+115 files in other folders)
